--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier:check": "prettier --check ."
   },
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -29,6 +30,7 @@
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
+    "prisma": "^6.5.0",
     "tailwindcss": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8.26.1"
