--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "json"],
   "rules": {
-    "no-console": 1
+    "no-console": ["error", { "allow": ["warn", "error", "info"] }]
   },
   "ignorePatterns": [
     "package.json",
