--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.484.0",
     "next": "15.2.2",
     "puppeteer": "^24.4.0",
     "react": "^19.0.0",
