--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.484.0",
     "next": "15.2.2",
+    "openai": "^4.90.0",
     "puppeteer": "^24.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
