--- a/.github/workflows/lint-check.yml
+++ b/.github/workflows/lint-check.yml
@@ -1,11 +1,13 @@
 name: Lint & Prettier Check
+
 on:
   pull_request:
     branches:
       - main
+
 jobs:
-  lint:
-    name: Run ESLint & Prettier
+  frontend:
+    name: Run ESLint & Prettier (Frontend)
     runs-on: ubuntu-latest
 
     defaults:
@@ -29,3 +31,33 @@ jobs:
 
       - name: Run Prettier Check
         run: npm run prettier:check
+
+  backend:
+    name: Run Go Lint & Vet (Backend)
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: backend
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: 1.23
+
+      - name: Install dependencies
+        run: go mod tidy
+
+      - name: Check Go code formatting
+        run: |
+          if [ -n "$(gofmt -l .)" ]; then
+            echo "Code is not formatted. Run 'go fmt' to fix."
+            exit 1
+          fi
+
+      - name: Run go vet
+        run: go vet ./...
